scripts/nullaway/wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8.txt
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAPacket.java:43: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.wparam = wparam;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAPacket.java:44: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.lparam = lparam;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAPacket.java:75: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.operation = operation;
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/GWCAPacket.java:78: error: [NullAway] dereferenced expression operation is @Nullable
        short operationId = operation.getOperationId();
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:33: error: [NullAway] @NonNull static field cb not initialized
    private static JComboBox cb, cbType;
                             ^
    (see http://t.uber.com/nullaway )
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:33: error: [NullAway] @NonNull static field cbType not initialized
    private static JComboBox cb, cbType;
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:35: error: [NullAway] @NonNull static field wTextField not initialized
    private static JTextField wTextField, lTextField;
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:35: error: [NullAway] @NonNull static field lTextField not initialized
    private static JTextField wTextField, lTextField;
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:37: error: [NullAway] @NonNull static field wLabel not initialized
    private static JLabel wLabel, lLabel;
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:37: error: [NullAway] @NonNull static field lLabel not initialized
    private static JLabel wLabel, lLabel;
                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Tutorial2.java:41: error: [NullAway] dereferenced expression gwcaConnection is @Nullable
                gwcaConnection.close();
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Tutorial1.java:60: error: [NullAway] dereferenced expression gwcaConnection is @Nullable
                gwcaConnection.close();
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/NamedPipeGWCAConnection.java:33: error: [NullAway] dereferenced expression gwcaPacket.getOperation() is @Nullable
        byteBuffer.putShort(gwcaPacket.getOperation().getOperationId());
                                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Tutorial3.java:43: error: [NullAway] dereferenced expression gwcaConnection is @Nullable
                gwcaConnection.close();
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Version.java:39: error: [NullAway] dereferenced expression props.get("version") is @Nullable
            version = props.get("version").toString();
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/MainTestingAllFunctions.java:305: error: [NullAway] dereferenced expression gwcaConnection is @Nullable
                gwcaConnection.close();
                              ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
16 errors
